--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PS'
+- GITenberg
 title: Pray You, Sir, Whose Daughter?
 url: http://www.gutenberg.org/ebooks/37355
